--- a/css/style.css
+++ b/css/style.css
@@ -11,9 +11,19 @@ h2 {
 h3 {
   font-size: 24px;
 }
+@media (max-width: 600px) {
+  h3 {
+    font-size: 20px;
+  }
+}
 
 p {
   font-size: 16px;
+}
+@media (max-width: 600px) {
+  p {
+    font-size: 14px;
+  }
 }
 
 li {
@@ -342,6 +352,11 @@ li {
 .profile-section .section-inner h3 {
   line-height: 26px;
   margin-bottom: 15px;
+}
+@media (max-width: 600px) {
+  .profile-section .section-inner h3 {
+    list-height: 1.4;
+  }
 }
 .profile-section .section-inner p {
   line-height: 1.8;
