--- a/SCSS/style.scss
+++ b/SCSS/style.scss
@@ -134,6 +134,9 @@
     h3 {
       line-height: 26px;
       margin-bottom: 15px;
+      @include mixin.mq-sp{
+        list-height: 1.4;
+      }
     }
 
     p {
@@ -149,7 +152,7 @@
   }
 }
 
- 
+
 
 // .profile-section {
 //   background-color: #cbe3e5;
