--- a/css/style.css
+++ b/css/style.css
@@ -365,7 +365,7 @@ li {
 @media (max-width: 600px) {
   .profile-section .section-inner {
     width: 100%;
-    padding: 0 16px;
+    padding: 0 24px;
   }
 }
 
@@ -384,6 +384,12 @@ li {
   max-width: 527px;
   text-align: left;
   color: #03104c;
+}
+@media (max-width: 600px) {
+  .news-section .section-inner {
+    width: 100%;
+    padding: 0 24px;
+  }
 }
 .news-section .section-inner .news-list {
   list-style: none;
