--- a/css/style.css
+++ b/css/style.css
@@ -457,6 +457,14 @@ li {
   display: block;
   width: 80px;
   height: 80px;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+@media (max-width: 600px) {
+  .contact-section .section-inner .innner-container .icons img {
+    width: 56px;
+    height: 56px;
+  }
 }
 .contact-section .section-inner .innner-container .icons:hover {
   box-shadow: 0 8px 12px rgba(0, 0, 0, 0.15);
